<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_InfoDataFB" Id="{f292264d-0e04-4f99-9d1d-065f4d7dd942}">
    <Declaration><![CDATA[TYPE ST_InfoDataFB :
STRUCT
	usiMapState:	USINT;
	uiMapDiag:		USINT;
	usiDummy:		USINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>